# g1gc-anatomy

./: .gitignore  astro.config.mjs  extract.rs  package-lock.json  package.json
jfrust/: Cargo.toml
jfrust/assets/: index.html
jfrust/src/: jfr.rs  main.rs
src/content/docs/: index.mdx
src/content/docs/simple/: jfr.mdx  oldgen-failed.mdx  tenureme.mdx  young.mdx
