[package]
name = "jfrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38", features = [
  "rt-multi-thread",
  "io-util",
  "io-std",
  "tokio-macros",
  "libc",
] }
axum = { version = "0.7.5", features = ["http2"] }
"plotly" = "0.9.0"
"chrono" = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.8", features = ["derive"] }
itertools = "0.13.0"
webbrowser = "1.0.1"
iso8601 = "0.6.1"
